# obs-audio-video-sync-dock

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  generate-pattern.yml  main.yml  pylint.yml
ci/: forum-update-info.json
ci/windows/: package-windows.cmd
cmake/: ObsPluginHelpers.cmake
data/locale/: en-US.ini
docs/: generate-pattern.sh
installer/: installer-Windows.iss.in
packaging/debian/: changelog  control  copyright  rules
src/: peak-finder.hpp  plugin-macros.h.in  plugin-main.c  sync-test-dock.cpp  sync-test-dock.hpp  sync-test-monitor.c  sync-test-output.cpp  sync-test-output.hpp
tool/: lint.sh  requirements.txt  videogen.py
